--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,32 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-           
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MaxWidth="200"/>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Column="0"
+                    Background="#44C0C0C0">
+
+            <Button Background="#007BFF"
+                    Margin="4,4,4,4"
+                    Foreground="#FFF"
+                    Width="100">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+                <TextBlock Text="Add New Task"
+                           TextWrapping="Wrap"
+                           TextAlignment="Center"/>
+            </Button>
+        </StackPanel>
+
+        
     </Grid>
 </Window>
