--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkBoard"
         mc:Ignorable="d"
-        Title="WorkBoard" MinHeight="450" MinWidth="800"
+        Title="WorkBoard" MinHeight="400" MinWidth="800"
         WindowState="Normal" WindowStyle="ToolWindow">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,6 +16,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
+        <!-- Login Box -->
         <Popup Name="loginPopup"
                    Placement="Center"
                    HorizontalOffset="0"
@@ -55,12 +56,67 @@
             </Border>
         </Popup>
 
+        <!-- Pop up for users list-->
+        <Popup Name="userListPopup"
+                   PlacementTarget="{Binding ElementName=MainPanel}"
+                   Placement="Center"
+                   HorizontalOffset="0"
+                   VerticalOffset="-25"
+                   Width="200"
+                   AllowsTransparency="True">
+            <StackPanel Background="#44C0C0C0">
+                <Button Width="25"
+                        HorizontalAlignment="Right"
+                        Background="#DC3545"
+                        Click="closeUserListPopup">
+                    <TextBlock Text="CLOSE"
+                               FontSize="8"
+                               Foreground="#FFF"/>
+                </Button>
+                <TextBlock Text="List of users:"
+                           HorizontalAlignment="Center"
+                           FontWeight="Bold"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Email"
+                               FontWeight="DemiBold"
+                               Margin="0,0,100,0"/>
+                    <TextBlock Text="Role"
+                               FontWeight="DemiBold"/>
+                </StackPanel>
+                <ListView Name="userListText"></ListView>
+            </StackPanel>
+        </Popup>
+
         <Border BorderThickness="0,0,1,0"
                 BorderBrush="Black">
         <StackPanel Grid.Column="0"
                     Background="#44C0C0C0">
+                <Border BorderBrush="Black"
+                    BorderThickness="0,0,0,1"
+                    Margin="0,0,0,25">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text=""
+                               FontWeight="Bold"
+                               Margin="4,4,4,4"
+                               Name="loggedInUserEmail"
+                               VerticalAlignment="Center"/>
+                        <Button HorizontalAlignment="Right"
+                            Name="userList"
+                            Click="userListButton">
+                            <Image Width="25"
+                           Margin="0,0,0,0"
+                           HorizontalAlignment="Right">
+                                <Image.Source>
+                                    <BitmapImage DecodePixelWidth="125" 
+                                         UriSource="/images/users.png"
+                                         RenderOptions.BitmapScalingMode="HighQuality"/>
+                                </Image.Source>
+                            </Image>
+                        </Button>
+                    </StackPanel>
+                </Border>
 
-            <Button Background="#007BFF"
+                <Button Background="#007BFF"
                     Margin="4,4,4,4"
                     Foreground="#FFF"
                     Width="125"
